feat: autoinstall ubuntu iso with cpu and gpu flavors

--- a/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
@@ -12,7 +12,9 @@ autoinstall:
   network:
     network:
       ethernets:
-        ens3:
+        all-eth:
+          match:
+            name: en*
           dhcp4: true
       version: 2
   storage:
@@ -20,5 +22,4 @@ autoinstall:
       name: lvm
 
   late-commands:
-    # Install the guest AMDSEV kernel
     - curtin in-target -- dpkg -i /cdrom/packages/*.deb
