--- a/artifacts/autoinstall_ubuntu/user-data-guest-gpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-gpu.yaml
@@ -21,10 +21,22 @@ autoinstall:
     layout:
       name: lvm
 
+  user-data:
+    mounts:
+      - [ "/dev/sr0", "/media/cvm-agent-entrypoint", "udf,iso9660", "auto,ro,utf8", "0", "0" ]
+
   late-commands:
     - curtin in-target -- dpkg -i /cdrom/packages/*.deb
     - curtin in-target -- apt-get update
-    - curtin in-target -- apt-get -y install nvidia-driver-550-server-open
+    - curtin in-target -- apt-get -y install nvidia-driver-550-server-open docker-compose-v2
     - curtin in-target -- echo "install nvidia /sbin/modprobe ecdsa_generic ecdh; /sbin/modprobe --ignore-install nvidia" > /etc/modprobe.d/nvidia-lkca.conf
     - curtin in-target -- sed -i "/^ExecStart=/d" /usr/lib/systemd/system/nvidia-persistenced.service
     - curtin in-target -- echo "ExecStart=/usr/bin/nvidia-persistenced --user nvidia-persistenced --uvm-persistence-mode --verbose" >> /usr/lib/systemd/system/nvidia-persistenced.service
+    # Copy over cvm-agent.
+    - curtin in-target -- mkdir /opt/nillion
+    - curtin in-target -- cp /cdrom/nillion/cvm-agent.sh /opt/nillion
+    - curtin in-target -- chmod +x /opt/nillion/cvm-agent.sh
+    # Configure cvm-agent to auto start.
+    - curtin in-target -- cp /cdrom/nillion/cvm-agent.service /etc/systemd/system/
+    - curtin in-target -- systemctl daemon-reload
+    - curtin in-target -- systemctl enable cvm-agent.service
