--- a/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
@@ -28,7 +28,7 @@ autoinstall:
   late-commands:
     - curtin in-target -- dpkg -i /cdrom/packages/*.deb
     - curtin in-target -- apt update
-    - curtin in-target -- apt install -y docker-compose-v2
+    - curtin in-target -- apt install -y docker-compose-v2 jq
     # Copy over cvm-agent.
     - curtin in-target -- mkdir /opt/nillion
     - curtin in-target -- cp /cdrom/nillion/cvm-agent.sh /opt/nillion
