--- a/artifacts/autoinstall_ubuntu/user-data-guest-gpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-gpu.yaml
@@ -28,7 +28,7 @@ autoinstall:
   late-commands:
     - curtin in-target -- dpkg -i /cdrom/packages/*.deb
     - curtin in-target -- apt-get update
-    - curtin in-target -- apt-get -y install nvidia-driver-550-server-open docker-compose-v2
+    - curtin in-target -- apt-get -y install nvidia-driver-550-server-open docker-compose-v2 jq
     - curtin in-target -- echo "install nvidia /sbin/modprobe ecdsa_generic ecdh; /sbin/modprobe --ignore-install nvidia" > /etc/modprobe.d/nvidia-lkca.conf
     - curtin in-target -- sed -i "/^ExecStart=/d" /usr/lib/systemd/system/nvidia-persistenced.service
     - curtin in-target -- echo "ExecStart=/usr/bin/nvidia-persistenced --user nvidia-persistenced --uvm-persistence-mode --verbose" >> /usr/lib/systemd/system/nvidia-persistenced.service
