--- a/cvm-agent/caddy/docker-compose.yaml
+++ b/cvm-agent/caddy/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     environment:
       - PROXY_HOSTNAME:${PROXY_HOSTNAME}
       - API_CONTAINER:${API_CONTAINER}
+      - API_PORT:${API_PORT}
     command: |
-      caddy reverse-proxy --from https://$PROXY_HOSTNAME --to $API_CONTAINER:80
+      caddy reverse-proxy --from https://$PROXY_HOSTNAME --to $API_CONTAINER:$API_PORT
 
