--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -30,3 +30,5 @@ libc = "0.2"
 rstest = { version = "0.25", default-features = false }
 tracing-test = "0.2.5"
 testcontainers-modules = { version = "0.11", features = ["blocking", "postgres"] }
+test-with = { version = "0.14", default-features = false }
+
