--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -7,19 +7,21 @@ edition = "2021"
 anyhow = "1.0"
 async-trait = "0.1"
 clap = { version = "4.5", features = ["derive", "env"] }
+dirs = "6"
 docker-compose-types = "0.16"
+erased-serde = "0.4"
+hex = { version = "0.4", features = ["serde"] }
 metrics = "0.24"
+qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-erased-serde = "0.4"
-dirs = "6"
 serde_yaml = "0.9"
+sha2 = "0.10"
+tempfile = "3.19.1"
 thiserror = "2"
+tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
-tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs"] }
-qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
-tempfile = "3.19.1"
 
 [dev-dependencies]
 libc = "0.2"
