--- a/attestation-service/Cargo.toml
+++ b/attestation-service/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+async-trait = "0.1"
 axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
 hex = { version = "0.4", features = ["serde"] }
