--- a/attestation-service/Cargo.toml
+++ b/attestation-service/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0"
 async-trait = "0.1"
 axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
+config = { version = "0.15", default-features = false, features = ["yaml"] }
 hex = { version = "0.4", features = ["serde"] }
 openssl = { version = "^0.10", features = ["vendored"] }
 rand = "0.9"
