--- a/nilcc-attester/Cargo.toml
+++ b/nilcc-attester/Cargo.toml
@@ -16,7 +16,7 @@ reqwest = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 sev = { version = "6.1", default-features = false, features = ["openssl", "snp"] }
 thiserror = "2.0"
-tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 x509-parser = { version = "0.17.0", features = ["verify"] } 
