--- a/cvm-agent/services/docker-compose.yaml
+++ b/cvm-agent/services/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     restart: unless-stopped
     environment:
       APP__SERVER__BIND_ENDPOINT: "0.0.0.0:59812"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:59812/health"]
 
   nilcc-proxy:
     image: caddy:2
