--- a/.github/workflows/cd-image.yml
+++ b/.github/workflows/cd-image.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/Dockerfile.nilcc-attester
+          file: docker/nilcc-attester.dockerfile
           tags: ${{ env.DOCKER_TAG }}
 
       - name: Log in to the container registry
@@ -35,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/Dockerfile.nilcc-attester
+          file: docker/nilcc-attester.dockerfile
           push: true
           tags: ${{ env.DOCKER_TAG }}
           build-args: |
