--- a/cvm-agent/services/docker-compose.yaml
+++ b/cvm-agent/services/docker-compose.yaml
@@ -15,10 +15,6 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    environment:
-      PROXY_HOSTNAME: "${PROXY_HOSTNAME}"
-      API_CONTAINER: "${API_CONTAINER}"
-      API_PORT: "${API_PORT}"
-    command: |
-      caddy reverse-proxy --from https://$PROXY_HOSTNAME --to $API_CONTAINER:$API_PORT
+    volumes:
+      - ${CADDY_INPUT_FILE}:/etc/caddy/Caddyfile
 
