--- a/cvm-agent/services/docker-compose.yaml
+++ b/cvm-agent/services/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     image: ghcr.io/nillionnetwork/nilcc-attester:latest
     restart: unless-stopped
     environment:
-      APP__SERVER__BIND_ENDPOINT: "0.0.0.0:59812"
+      APP__SERVER__BIND_ENDPOINT: "0.0.0.0:80"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:59812/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
 
   nilcc-proxy:
     image: caddy:2
