--- a/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
@@ -39,4 +39,12 @@ autoinstall:
     - curtin in-target -- cp /cdrom/nillion/cvm-agent.service /etc/systemd/system/
     - curtin in-target -- systemctl daemon-reload
     - curtin in-target -- systemctl enable cvm-agent.service
+    # Copy kernel and initrd to host
+    - |
+      curtin in-target -- bash -c '
+        mkdir -p /mnt/shared
+        mount -t 9p -o trans=virtio hostshare /mnt/shared
+        cp /boot/vmlinuz-*snp* /mnt/shared/
+        cp /boot/initrd.img-*snp* /mnt/shared/
+      '
 
