--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Build guest gpu iso
         run: artifacts/autoinstall_ubuntu/build.sh guest gpu
 
+      - name: Build initrd
+        run: artifacts/initramfs/build.sh
+
       - name: Build guest cpu qcow2
         run: artifacts/vm_image/build.sh cpu
 
