--- a/artifacts/initramfs/Dockerfile
+++ b/artifacts/initramfs/Dockerfile
@@ -1,7 +1,22 @@
+FROM rust:1.86-alpine AS build
+
+WORKDIR /opt/nillion
+RUN apk add --no-cache musl-dev
+
+COPY . .
+RUN cargo build --release --locked -p initrd-helper
+
 FROM ubuntu:24.04
+
+COPY artifacts/initramfs/build/kernel/kernel.deb /tmp/
 
 RUN apt update \
   && apt upgrade -y \
-  && rm -rf /var/lib/apt/lists/*
+  && apt install -y kmod \
+  && apt install -y /tmp/kernel.deb \
+  && rm -rf /var/lib/apt/lists/* \
+  && rm /tmp/kernel.deb
 
-COPY init.sh /init
+COPY artifacts/initramfs/init.sh /init
+COPY --from=build /opt/nillion/target/release/initrd-helper /opt/nillion/initrd-helper
+
