feat: add disk integrity checks on vm start

--- a/artifacts/initramfs/Dockerfile
+++ b/artifacts/initramfs/Dockerfile
@@ -12,7 +12,7 @@ COPY artifacts/initramfs/build/kernel/kernel.deb /tmp/
 
 RUN apt update \
   && apt upgrade -y \
-  && apt install -y kmod \
+  && apt install -y kmod cryptsetup-bin \
   && apt install -y /tmp/kernel.deb \
   && rm -rf /var/lib/apt/lists/* \
   && rm /tmp/kernel.deb
