chore: rename attestation-verifier to nilcc-verifier

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 resolver = "2"
 
 members = [
-  "attestation-verifier",
   "initrd-helper",
   "nilcc-attester",
-  "nilcc-agent"
+  "nilcc-agent",
+  "nilcc-verifier",
 ]
