--- a/nilcc-verifier/Cargo.toml
+++ b/nilcc-verifier/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+bincode = "1.3"
 clap = { version = "4.5", features = ["derive", "string"] }
 hex = "0.4"
 openssl = { version = "^0.10", features = ["vendored"] }
