--- a/.github/workflows/nilcc-api-ci.yml
+++ b/.github/workflows/nilcc-api-ci.yml
@@ -23,8 +23,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "23"
+          node-version: "24"
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: nilcc-api/package.json
       - run: pnpm install
       - run: pnpm exec biome ci
       - run: tsc
@@ -37,11 +39,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "23"
+          node-version: "24"
       - uses: pnpm/action-setup@v4
+        with:
+          package_json_file: nilcc-api/package.json
       - run: pnpm install
       - run: pnpm vitest --coverage
       - uses: davelosert/vitest-coverage-report-action@v2
         if: always()
         with:
           comment-on: "pr"
+          vite-config-path: "nilcc-api/vitest.config.ts"
+          working-directory: "nilcc-api"
