--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -11,12 +11,14 @@
     "fmt": "biome format ."
   },
   "engines": {
-    "node": ">=23"
+    "node": ">=24"
   },
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.4",
+    "@faker-js/faker": "^9.8.0",
     "@stoplight/spectral-cli": "^6.15.0",
     "@types/node": "^22.15.21",
+    "@vitest/coverage-v8": "^3.1.4",
     "docker-compose": "^1.2.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
@@ -36,6 +38,7 @@
     "http-status-codes": "^2.3.0",
     "pg": "^8.16.0",
     "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "temporal-polyfill": "^0.3.0",
     "typeorm": "^0.3.24",
