--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -29,12 +29,12 @@
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
     "@hono/node-server": "^1.14.2",
     "@hono/prometheus": "^1.0.1",
-    "@hono/swagger-ui": "^0.5.1",
-    "@hono/zod-validator": "^0.5.0",
+    "@hono/zod-validator": "^0.4.3",
     "commander": "^14.0.0",
     "dotenv": "^16.5.0",
     "effect": "^3.15.2",
     "hono": "^4.7.10",
+    "hono-openapi": "^0.4.8",
     "http-status-codes": "^2.3.0",
     "pg": "^8.16.0",
     "pino": "^9.7.0",
@@ -43,6 +43,7 @@
     "temporal-polyfill": "^0.3.0",
     "typeorm": "^0.3.24",
     "zod": "^3.25.13",
+    "zod-openapi": "^4.2.4",
     "zod-validation-error": "^3.4.1"
   },
   "packageManager": "pnpm@10.10.0"
