--- a/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-cpu.yaml
@@ -36,6 +36,8 @@ autoinstall:
     - curtin in-target -- cp /cdrom/nillion/cvm-agent.service /etc/systemd/system/
     - curtin in-target -- systemctl daemon-reload
     - curtin in-target -- systemctl enable cvm-agent.service
+    # Copy nilcc-version file
+    - curtin in-target -- cp /cdrom/nillion/nilcc-version /opt/nillion
     # Copy kernel and initrd to host
     - |
       curtin in-target -- bash -c '
