--- a/cvm-agent/services/docker-compose.yaml
+++ b/cvm-agent/services/docker-compose.yaml
@@ -5,8 +5,11 @@ services:
     privileged: true
     volumes:
       - "/dev/sev-guest:/dev/sev-guest"
+    ports:
+      - 80
     environment:
       APP__SERVER__BIND_ENDPOINT: "0.0.0.0:80"
+      APP__NILCC_VERSION: ${NILCC_VERSION}
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
 
