--- a/nilcc-attester/Cargo.toml
+++ b/nilcc-attester/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.8"
 clap = { version = "4.5", features = ["derive"] }
 config = { version = "0.15", default-features = false, features = ["yaml"] }
 hex = { version = "0.4", features = ["serde"] }
+num_cpus = "1.16"
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 sev = { version = "6.1", default-features = false, features = ["snp"] }
