feat: expose vm type

--- a/artifacts/autoinstall_ubuntu/user-data-guest-gpu.yaml
+++ b/artifacts/autoinstall_ubuntu/user-data-guest-gpu.yaml
@@ -39,8 +39,9 @@ autoinstall:
     - curtin in-target -- cp /cdrom/nillion/cvm-agent.service /etc/systemd/system/
     - curtin in-target -- systemctl daemon-reload
     - curtin in-target -- systemctl enable cvm-agent.service
-    # Copy nilcc-version file
+    # Copy metadata files
     - curtin in-target -- cp /cdrom/nillion/nilcc-version /opt/nillion
+    - curtin in-target -- cp /cdrom/nillion/nilcc-vm-type /opt/nillion
     # Copy kernel and initrd to host
     - |
       curtin in-target -- bash -c '
