--- a/nilcc-verifier/Cargo.toml
+++ b/nilcc-verifier/Cargo.toml
@@ -6,14 +6,17 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 bincode = "1.3"
-clap = { version = "4.5", features = ["derive", "string"] }
-hex = "0.4"
+clap = { version = "4.5", features = ["derive", "string", "env"] }
+hex = { version = "0.4", features = ["serde"] }
+object_store = { version = "0.12", features = ["aws"] }
 openssl = { version = "^0.10", features = ["vendored"] }
-reqwest = { version = "0.12", features = ["blocking"] }
+rand = "0.9"
+reqwest = { version = "0.12", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sev = { version = "6.1", default-features = false, features = ["openssl", "snp"] }
 thiserror = "2.0"
+tokio = { version = "1.45", features = ["rt"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 x509-parser = { version = "0.17.0", features = ["verify"] } 
