--- a/nilcc-api/.env.sample
+++ b/nilcc-api/.env.sample
@@ -1,5 +1,6 @@
 APP_DB_URI=psql://postgres:postgres@localhost:5432/postgres
-APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations
+APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation
 APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
+APP_METAL_INSTANCE_API_KEY=your-metal-instance-api-key
