feat(nilcc-agent): detect nvidia gpu

--- a/nilcc-agent/nilcc-agent-config.sample.yaml
+++ b/nilcc-agent/nilcc-agent-config.sample.yaml
@@ -4,6 +4,4 @@ vm_store: /tmp
 nilcc_api_endpoint: "http://127.0.0.1:50051"
 nilcc_api_key: test
 
-gpu:
-  model: "NVIDIA H100"
-  count: 1
+sync_interval: 10s
