--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -28,6 +28,8 @@ chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.17.0", features = ["serde", "v4"] }
 sysinfo = { version = "0.35"}
 once_cell = "1.20"
+humantime = { version = "2.2.0"}
+humantime-serde = "1.1.1"
 
 [dev-dependencies]
 libc = "0.2"
