--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -33,6 +33,7 @@ humantime = { version = "2.2.0"}
 humantime-serde = "1.1.1"
 
 [dev-dependencies]
+mockall = "0.13"
 libc = "0.2"
 rstest = { version = "0.25", default-features = false }
 tracing-test = "0.2.5"
