feat(api): dns management
* Add workload dns records creation and deletion
* Improve errors, printing stack traces of causes
* Change services to be instanciated in bindigs to be able to configure
  them

--- a/.github/workflows/nilcc-api-ci.yml
+++ b/.github/workflows/nilcc-api-ci.yml
@@ -44,7 +44,13 @@ jobs:
         with:
           package_json_file: nilcc-api/package.json
       - run: pnpm install
-      - run: pnpm vitest --coverage
+      - env:
+          AWS_REGION: us-east-1
+          AWS_DEFAULT_REGION: us-east-1
+          AWS_ACCESS_KEY_ID: test
+          AWS_SECRET_ACCESS_KEY: test
+          AWS_ENDPOINT_URL: http://localhost:4566
+        run: pnpm vitest --coverage
       - uses: davelosert/vitest-coverage-report-action@v2
         if: always()
         with:
