--- a/nilcc-api/.env.sample
+++ b/nilcc-api/.env.sample
@@ -4,3 +4,5 @@ APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
 APP_METAL_INSTANCE_API_KEY=your-metal-instance-api-key
+APP_WORKLOAD_DNS_DOMAIN=workload.nilcc.com
+APP_METAL_INSTANCE_DNS_DOMAIN=metal.nilcc.com
