--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
+    "@aws-sdk/client-route-53": "^3.826.0",
+    "@aws-sdk/credential-providers": "^3.826.0",
     "@hono/node-server": "^1.14.2",
     "@hono/prometheus": "^1.0.1",
     "@hono/zod-validator": "^0.4.3",
