--- a/nilcc-api/tests/docker/docker-compose.yml
+++ b/nilcc-api/tests/docker/docker-compose.yml
@@ -5,3 +5,7 @@ services:
       POSTGRES_PASSWORD: postgres
     ports:
       - "35432:5432"
+  localstack:
+    image: localstack/localstack
+    ports:
+      - "4566:4566"
