--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,4 +2,5 @@ style_edition = "2021"
 use_small_heuristics = "Max"
 merge_derives = false
 max_width = 120
-imports_granularity = "Crate"
+# This is only available in nigthly
+#imports_granularity = "Crate"
