--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -12,6 +12,7 @@ docker-compose-types = "0.17"
 erased-serde = "0.4"
 hex = { version = "0.4", features = ["serde"] }
 metrics = "0.24"
+metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
 qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
