--- a/nilcc-api/.env.test
+++ b/nilcc-api/.env.test
@@ -1,5 +1,5 @@
 APP_DB_URI=psql://postgres:postgres@localhost:35432/postgres
-APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation,localstack,pretty-logs
+APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation,localstack,pretty-logs,http-error-stacktrace
 APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
