--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "uuid"] }
+strum = { version = "0.27", features = ["derive"] }
 tempfile = "3.19.1"
 tera = { version = "1", default-features = false }
 thiserror = "2"
