--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -6,12 +6,12 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0"
 async-trait = "0.1"
-axum = { version = "0.8.4", features = ["json"] }
+axum = { version = "0.8", features = ["json"] }
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 hex = { version = "0.4", features = ["serde"] }
-humantime = { version = "2.2.0"}
-humantime-serde = "1.1.1"
+humantime = { version = "2.2"}
+humantime-serde = "1.1"
 metrics = "0.24"
 metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
 once_cell = "1.20"
@@ -24,15 +24,16 @@ sha2 = "0.10"
 sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "uuid"] }
 strum = { version = "0.27", features = ["derive"] }
 sysinfo = { version = "0.35"}
-tempfile = "3.19.1"
+tempfile = "3.20"
 tera = { version = "1", default-features = false }
 thiserror = "2"
 tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
-convert_case = "0.8.0"
+tower = "0.5"
+convert_case = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
-uuid = { version = "1.17.0", features = ["serde", "v4"] }
-validator = { version = "0.20.0", features = ["derive"] }
+uuid = { version = "1.17", features = ["serde", "v4"] }
+validator = { version = "0.20", features = ["derive"] }
 
 [dev-dependencies]
 mockall = "0.13"
