--- a/nilcc-tests/docker/docker-compose.yml
+++ b/nilcc-tests/docker/docker-compose.yml
@@ -9,3 +9,9 @@ services:
     image: localstack/localstack
     ports:
       - "4566:4566"
+  agent:
+    image: caddy:2
+    ports:
+      - "35433:80"
+    command: |
+      caddy respond --listen :80 --body '{}' --header "Content-Type: application/json" 
