--- a/nilcc-api/.env.test
+++ b/nilcc-api/.env.test
@@ -5,5 +5,9 @@ APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
 APP_METAL_INSTANCE_API_KEY=your-metal-instance-api-key
 APP_USER_API_KEY=your-user-api-key
-APP_WORKLOAD_DNS_DOMAIN=workload.nilcc.com
-APP_METAL_INSTANCE_DNS_DOMAIN=metal.nilcc.com
+APP_WORKLOADS_DNS_ZONE=public.localhost
+APP_WORKLOADS_DNS_DOMAIN=workloads.public.localhost
+APP_METAL_INSTANCES_DNS_ZONE=private.localhost
+APP_METAL_INSTANCES_DNS_DOMAIN=agents.private.localhost
+APP_METAL_INSTANCES_ENDPOINT_SCHEME=http
+APP_METAL_INSTANCES_ENDPOINT_PORT=35433
