--- a/nilcc-agent/Cargo.toml
+++ b/nilcc-agent/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0"
 async-trait = "0.1"
 axum = { version = "0.8", features = ["json"] }
+axum-server = "0.7"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 hex = { version = "0.4", features = ["serde"] }
@@ -18,6 +19,7 @@ once_cell = "1.20"
 qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
 regex = "1.11"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+rustls-acme = { version = "0.14", features = ["axum"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
