--- a/nilcc-api/.env.sample
+++ b/nilcc-api/.env.sample
@@ -5,5 +5,7 @@ APP_METRICS_PORT=9091
 APP_HTTP_API_PORT=8080
 APP_METAL_INSTANCE_API_KEY=your-metal-instance-api-key
 APP_USER_API_KEY=your-user-api-key
-APP_WORKLOAD_DNS_DOMAIN=workload.nilcc.com
-APP_METAL_INSTANCE_DNS_DOMAIN=metal.nilcc.com
+APP_WORKLOADS_DNS_ZONE=nillionusercontent.com
+APP_WORKLOADS_DNS_DOMAIN=workloads.nillionusercontent.com
+APP_METAL_INSTANCE_DNS_ZONE=nilcc.com
+APP_METAL_INSTANCE_DNS_DOMAIN=agents.nilcc.com
