feat: Add docker-compose file for nilcc-api

--- a/nilcc-api/.env.dev
+++ b/nilcc-api/.env.dev
@@ -1,5 +1,5 @@
-APP_DB_URI=psql://postgres:postgres@localhost:35432/postgres
-APP_LOCALSTACK_URI=http://localhost:4566
+APP_DB_URI=psql://postgres:postgres@postgress:5432/nilcc_db
+APP_LOCALSTACK_URI=http://localstack:4566
 APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation,localstack,pretty-logs,http-error-stacktrace
 APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
