--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -3,9 +3,11 @@ on:
   pull_request:
     paths:
       - 'artifacts/**'
+      - 'cvm-agent/**'
   push:
     paths:
       - 'artifacts/**'
+      - 'cvm-agent/**'
     branches:
       - main
 
