feat: add cvm-agent endpoint to list containers and fetch their logs

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@
 !/nilcc-attester
 !/nilcc-agent
 !/nilcc-verifier
+!/cvm-agent
 !/Cargo.toml
 !/Cargo.lock
 !/artifacts/initramfs/build/kernel/kernel.deb
