--- a/cvm-agent/services/docker-compose.yaml
+++ b/cvm-agent/services/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       APP__SERVER__BIND_ENDPOINT: "0.0.0.0:80"
       APP__NILCC_VERSION: ${NILCC_VERSION}
       APP__VM_TYPE: ${NILCC_VM_TYPE}
+      NO_COLOR: 1
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost/health"]
 
