--- a/cvm-agent/Cargo.toml
+++ b/cvm-agent/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 axum = { version = "0.8", features = ["json"] }
+axum-valid = "0.24"
 bollard = "0.19"
 clap = { version = "4.5", features = ["derive", "string"] }
 futures = "0.3"
