feat: add GPU attestation capabilities to nilcc-attester

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build/
 dist/
 .idea/
+.venv/
 target/
 node_modules/
 coverage/
@@ -8,3 +9,4 @@ vitest.config.js
 .env
 postgres_data/
 localstack_data/
+nilcc-attester/gpu-attester/verifier.log
