--- a/nilcc-attester/Cargo.toml
+++ b/nilcc-attester/Cargo.toml
@@ -15,6 +15,6 @@ rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 sev = { version = "6.1", default-features = false, features = ["snp"] }
 thiserror = "2.0"
-tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "signal"] }
+tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "signal"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
