chore: use `postgres` schema for postgres url

--- a/nilcc-api/.env.sample
+++ b/nilcc-api/.env.sample
@@ -1,4 +1,4 @@
-APP_DB_URI=psql://postgres:postgres@localhost:5432/postgres
+APP_DB_URI=postgres://postgres:postgres@localhost:5432/postgres
 APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation
 APP_LOG_LEVEL=debug
 APP_METRICS_PORT=9091
