--- a/nilcc-api/.env.test
+++ b/nilcc-api/.env.test
@@ -1,4 +1,4 @@
-APP_DB_URI=psql://postgres:postgres@localhost:35432/postgres
+APP_DB_URI=postgres://postgres:postgres@localhost:35432/postgres
 APP_LOCALSTACK_URI=http://localhost:4566
 APP_ENABLED_FEATURES=openapi,prometheus-metrics,migrations,response-validation,localstack,pretty-logs,http-error-stacktrace
 APP_LOG_LEVEL=debug
