chore: ping nilcc-attester in cvm-agent to 0.1.0

--- a/cvm-agent/resources/docker-compose.yaml
+++ b/cvm-agent/resources/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   nilcc-attester:
-    image: ghcr.io/nillionnetwork/nilcc-attester:latest
+    image: ghcr.io/nillionnetwork/nilcc-attester:0.1.0
     restart: unless-stopped
     privileged: true
     volumes:
