--- a/.github/workflows/nilcc-verifier-cd.yml
+++ b/.github/workflows/nilcc-verifier-cd.yml
@@ -2,20 +2,30 @@ name: nilcc-verifier docker
 
 on:
   push:
+    tags:
+      - 'nilcc-verifier-*'
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   docker-build-nilcc-verifier:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_TAG: ghcr.io/nillionnetwork/nilcc-verifier:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Generate docker tag
+        run: |
+          if [[ "$GITHUB_REF" =~ ^refs/tags/nilcc-verifier-.* ]]; then
+            # Remove the 'refs/tags/nilcc-verifier-' prefix for tags
+            tag=${GITHUB_REF:25}
+          else
+            # Or use `latest` tag otherwise
+            tag=latest
+          fi
+          echo "DOCKER_TAG=ghcr.io/nillionnetwork/nilcc-verifier:${tag}" >> $GITHUB_ENV
 
       - name: Build Docker image
         uses: docker/build-push-action@v2
