feat: allow enabling artifact versions and tying workloads to them

--- a/nilcc-api/.env.test
+++ b/nilcc-api/.env.test
@@ -12,3 +12,4 @@ APP_METAL_INSTANCES_DNS_ZONE=private.localhost
 APP_METAL_INSTANCES_DNS_DOMAIN=agents.private.localhost
 APP_METAL_INSTANCES_ENDPOINT_SCHEME=http
 APP_METAL_INSTANCES_ENDPOINT_PORT=35433
+APP_ARTIFACTS_BASE_URL=http://127.0.0.1:35434
