--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -32,6 +32,7 @@
     "@hono/node-server": "^1.14.2",
     "@hono/prometheus": "^1.0.1",
     "@hono/zod-validator": "^0.4.3",
+    "@types/semver": "^7.7.1",
     "commander": "^14.0.0",
     "dotenv": "^16.5.0",
     "effect": "^3.15.2",
@@ -43,6 +44,7 @@
     "pino-pretty": "^13.0.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
+    "semver": "^7.7.2",
     "temporal-polyfill": "^0.3.0",
     "tsx": "^4.19.4",
     "typeorm": "^0.3.24",
