ci: only trigger builds if paths are affected

--- a/.github/workflows/nilcc-agent-cd.yml
+++ b/.github/workflows/nilcc-agent-cd.yml
@@ -5,6 +5,9 @@ on:
       - 'nilcc-agent-*'
     branches:
       - main
+    paths:
+      - 'nilcc-agent/**'
+      - 'Cargo.lock'
 
 permissions:
   id-token: write
