--- a/.github/workflows/nilcc-attester-cd.yml
+++ b/.github/workflows/nilcc-attester-cd.yml
@@ -6,6 +6,9 @@ on:
       - 'nilcc-attester-*'
     branches:
       - main
+    paths:
+      - 'nilcc-attester/**'
+      - 'Cargo.lock'
 
 jobs:
   docker-build-nilcc-attester:
