chore: trigger docker image builds when dockerfiles change

--- a/.github/workflows/nilcc-admin-cli-cd.yml
+++ b/.github/workflows/nilcc-admin-cli-cd.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'nilcc-admin-cli/**'
       - 'Cargo.lock'
+      - 'docker/nilcc-admin-cli.dockerfile'
 
 jobs:
   docker-build-nilcc-admin-cli:
