--- a/.github/workflows/nilcc-attester-cd.yml
+++ b/.github/workflows/nilcc-attester-cd.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'nilcc-attester/**'
       - 'Cargo.lock'
+      - 'docker/nilcc-attester.dockerfile'
 
 jobs:
   docker-build-nilcc-attester:
