--- a/.github/workflows/nilcc-verifier-cd.yml
+++ b/.github/workflows/nilcc-verifier-cd.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - 'nilcc-verifier/**'
       - 'Cargo.lock'
+      - 'docker/nilcc-verifier.dockerfile'
 
 jobs:
   docker-build-nilcc-verifier:
