--- a/.github/workflows/nilcc-admin-cli-docker.yml
+++ b/.github/workflows/nilcc-admin-cli-docker.yml
@@ -1,18 +1,17 @@
-name: nilcc-attester docker
+name: nilcc-admin-cli docker
 
 on:
   push:
     tags:
-      - 'nilcc-attester-*'
+      - 'nilcc-admin-cli-*'
     branches:
       - main
     paths:
-      - 'nilcc-attester/**'
+      - 'nilcc-admin-cli/**'
       - 'Cargo.lock'
-      - 'docker/nilcc-attester.dockerfile'
 
 jobs:
-  docker-build-nilcc-attester:
+  docker-build-nilcc-admin-cli:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,20 +21,20 @@ jobs:
 
       - name: Generate docker tag
         run: |
-          if [[ "$GITHUB_REF" =~ ^refs/tags/nilcc-attester-.* ]]; then
-            # Remove the 'refs/tags/nilcc-attester-' prefix for tags
-            tag=${GITHUB_REF:25}
+          if [[ "$GITHUB_REF" =~ ^refs/tags/nilcc-admin-cli-.* ]]; then
+            # Remove the 'refs/tags/nilcc-admin-cli-' prefix for tags
+            tag=${GITHUB_REF:26}
           else
             # Or use `latest` tag otherwise
             tag=latest
           fi
-          echo "DOCKER_TAG=ghcr.io/nillionnetwork/nilcc-attester:${tag}" >> $GITHUB_ENV
+          echo "DOCKER_TAG=ghcr.io/nillionnetwork/nilcc-admin-cli:${tag}" >> $GITHUB_ENV
 
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/nilcc-attester.dockerfile
+          file: nilcc-admin-cli/Dockerfile
           tags: ${{ env.DOCKER_TAG }}
 
       - name: Log in to the container registry
@@ -49,8 +48,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/nilcc-attester.dockerfile
+          file: nilcc-admin-cli/Dockerfile
           push: true
           tags: ${{ env.DOCKER_TAG }}
           build-args: |
             VERSION=${{ env.PACKAGE_VERSION }}
+
