feat: use HWE kernel 6.14 rather than a custom built one

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt install -y jq squashfs-tools cloud-image-utils
+          sudo apt install -y --no-install-recommends jq squashfs-tools cloud-image-utils qemu-system-x86
 
       - name: Install rust toolchain
         uses: dtolnay/rust-toolchain@1.85.0
