chore: remove all CVM files that change on each setup

--- a/artifacts/initramfs/Dockerfile
+++ b/artifacts/initramfs/Dockerfile
@@ -8,7 +8,8 @@ RUN apt update \
     kmod \
     cryptsetup-bin \
     linux-modules-${KERNEL_VERSION}-generic \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/* \
+  && apt clean
 
 COPY artifacts/initramfs/init.sh /init
 
