Add `/api/v1/attestation/verify` (binary-only SEV-SNP signature check)
New endpoint POST /api/v1/attestation/verify`.
Input: reportBinary (base64). Optional vcekPem; otherwise chipId + reportedTcb to fetch VCEK.
Extracts r||s from last 96 bytes; verifies ECDSA P-384 over SHA-384 of the preceding bytes.
Router, DTO, service, tests added; client fixture and paths wired.

--- a/nilcc-api/package.json
+++ b/nilcc-api/package.json
@@ -51,7 +51,9 @@
     "uuid": "^11.1.0",
     "zod": "^3.25.13",
     "zod-openapi": "^4.2.4",
-    "zod-validation-error": "^3.4.1"
+    "zod-validation-error": "^3.4.1",
+    "@peculiar/x509": "^1.11.0",
+    "@peculiar/asn1-schema": "^2.5.0"
   },
   "packageManager": "pnpm@10.10.0"
 }
