feat(nilcc-verifier): Make nilcc-verifier a library and move to crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ resolver = "2"
 
 members = [
   "crates/attestation-report",
+  "crates/attestation-verification",
   "crates/cvm-agent-models",
   "crates/nilcc-agent-models",
   "crates/nilcc-artifacts",
