chore: use `sev` as a workspace dependency

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ members = [
   "nilcc-agent-cli",
   "nilcc-verifier"
  ]
+
+[workspace.dependencies]
+sev = { git = "https://github.com/virtee/sev", branch = "main", default-features = false }
