--- a/crates/cvm-agent-models/Cargo.toml
+++ b/crates/cvm-agent-models/Cargo.toml
@@ -8,3 +8,4 @@ chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_with = { version = "3.16", features = ["hex"] }
 validator = { version = "0.20", features = ["derive"] }
+uuid = { version = "1.19", features = ["serde"] }
